#91 Sonar fixes / Reformatting / last adjustments in the web part